--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
             </div>
             <div class = "col d-flex flex-column contact gray-bg"> 
                 <h2 class = "fw-bold header-padding">Contact Me</h2>
-                <form class = "contact-form" action="https://formsubmit.co/kingdompiano19@gmail.com" method="POST">
+                <form class = "contact-form" action="https://formsubmit.co/f1395d261da50853b36924e052ba562c" method="POST">
                     <div class="form-group input-pad">
                         <label for="name">Name</label>
                         <input type="text" class="form-control" id="name" placeholder="Enter full name" required>
