--- a/main.html
+++ b/main.html
@@ -86,19 +86,19 @@
                 <form class = "contact-form" action="https://formsubmit.co/f1395d261da50853b36924e052ba562c" method="POST">
                     <div class="form-group input-pad">
                         <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter full name" required>
+                        <input type="text" class="form-control" name = "name" id="name" placeholder="Enter full name" required>
                     </div>
                     <div class="form-group input-pad">
                         <label for="phone-number">Phone Number</label>
-                        <input type="text" class="form-control" id="phone-number" placeholder="+1(xxx) xxx-xxxx (optional)">
+                        <input type="text" class="form-control" id="phone-number" name = "phone-number" placeholder="+1(xxx) xxx-xxxx (optional)">
                     </div>
                     <div class="form-group input-pad">
                         <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                        <input type="email" class="form-control" id="email" name = "email" aria-describedby="emailHelp" placeholder="Enter email" required>
                     </div>
                     <div class="form-group input-pad">
                         <label for="message">Message</label>
-                        <textarea class="form-control" id="message" rows="3" placeholder = "Leave a message here" required></textarea>
+                        <textarea class="form-control" name = "message" id="message" rows="3" placeholder = "Leave a message here" required></textarea>
                     </div>
                     <div class = "row align-items-center">
                         <div class = "col d-flex flex-column justify-content-center">
