--- a/main.html
+++ b/main.html
@@ -84,6 +84,11 @@
             <div class = "col d-flex flex-column contact gray-bg"> 
                 <h2 class = "fw-bold header-padding">Contact Me</h2>
                 <form class = "contact-form" action="https://formsubmit.co/f1395d261da50853b36924e052ba562c" method="POST">
+                    <!--Honeypot-->
+                    <input type="text" name = "_honey" style = "display: none;">
+
+                    <!--disable captcha-->
+                    <input type = "hidden" name = "_captcha" value = "false">
                     <div class="form-group input-pad">
                         <label for="name">Name</label>
                         <input type="text" class="form-control" name = "name" id="name" placeholder="Enter full name" required>
