--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <div class = "collapse navbar-collapse" id = "navbarMenu">
                     <a href = "#" class = "navbar-brand"><img class = "logo" src = "assets/logo.png"/></a>
                         <ul class = "navbar-nav ms-auto">
-                            <li class = "nav-item"><a href = "main.html" class = "nav-link" aria-current="page">Home</a></li>
+                            <li class = "nav-item"><a href = "index.html" class = "nav-link" aria-current="page">Home</a></li>
                             <li class = "nav-item"><a href = "#" class = "nav-link active">About</a></li>
                             <li class = "nav-item"><a href = "projects.html" class = "nav-link last">Projects</a></li>
                         </ul>
