--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                     <!--disable captcha-->
                     <input type = "hidden" name = "_captcha" value = "false">
 
-                    <input type = "hidden" name = "_next" value = "https://chanbeltran2019.github.io/official-portfolio/success.html">s
+                    <input type = "hidden" name = "_next" value = "https://chanbeltran2019.github.io/official-portfolio/success.html">
+                    
                     <div class="form-group input-pad">
                         <label for="name">Name</label>
                         <input type="text" class="form-control" name = "name" id="name" placeholder="Enter full name" required>
