--- a/success.html
+++ b/success.html
@@ -10,25 +10,15 @@
     <title>Chantal Beltran</title>
 </head>
 <body>
-    <div class = "container-fluid blue-bg">
-        <div class = "row">
-            <div class = "col">
-                <h1 class = "text-white"> Message has been sent!</h1>
-                <p class = "text-white">  I will get to you soon, have a wonderful day!</p>
-                <a href = "index.html"> Go back</a>
+    <div class = "container" style = "max-width: 680px;">
+            <div class = "col blue-bg" style = "margin-top: 80px; padding: 20px; border-radius: 10px; border: 1px solid #048A81;">
+                    <div class = "col-md-8 offset-md-2">
+                    <h1 class = "text-white text-align-left"> Message has been sent!</h1>
+                    <p class = "text-white">  I will get to you soon, have a wonderful day!</p>
+                    <a href = "index.html" class = "text-white"> Go back</a>
+                </div>
             </div>
-        </div>
     </div>
-    <div class = "container-fluid">
-        <div class = "row">
-          <div class = "col d-flex flex-column text-center">
-            <footer>
-                <img class = "footer-icon" src = "assets/logo.png" alt = "brand-logo">
-              <p class = "fw-bold"> Chantal Beltran</p>
-            </footer>
-          </div>
-        </div>
-      </div>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
