--- a/about.html
+++ b/about.html
@@ -21,7 +21,9 @@
                         <ul class = "navbar-nav ms-auto">
                             <li class = "nav-item"><a href = "index.html" class = "nav-link" aria-current="page">Home</a></li>
                             <li class = "nav-item"><a href = "#" class = "nav-link active">About</a></li>
-                            <li class = "nav-item"><a href = "projects.html" class = "nav-link last">Projects</a></li>
+                            <li class = "nav-item"><a href = "citizenship.html" class = "nav-link">Citizenship</a></li>
+                            <li class = "nav-item"><a href = "projects.html" class = "nav-link">Projects</a></li>
+                            <li class = "nav-item"><a href = "leadership.html" class = "nav-link last">Leadership</a></li>
                         </ul>
                 </div>
         </nav>
@@ -31,16 +33,30 @@
             <div class = "col flex-column justify-content-center">
                 <img class = "sm-about" src = "assets/intro-photo-cropped-2.jpg">
             </div>
-            <div class="col d-flex flex-column justify-content-center blue-bg">
-                <h2 class = "margin-auto lh-lg fs-1 text-white"> I am Chantal Beltran,</h2>
-                <p class = " margin-auto lh-lg fs-5 text-white"> I am a senior at the University of Central Florida and will be earning my Digital Media Bachelor's Degree on the Web Design track in the Spring of 2022.
-                  I consider myself a very involved student and always looking for opportunities to grow and learn. I am part of two mentoring programs,
-                  4Ever Knights and the Nicholson School of Communication and Media Alumni Mentorship Program. Continuing to learn valuable skills, I am activiely looking for 
-                  an internship and look forward to any opportunities that present themselves.
+        </div>
+        <div claass = "row">
+            <div class="col d-flex flex-column justify-content-center gray-bg">
+                <h2 class = "margin-auto lh-lg fs-1 header-padding"> I am Chantal Beltran,</h2>
+                <p class = " margin-auto lh-lg fs-6 header-padding"> I am a senior at the University of Central Florida and will be earning my Digital Media Bachelor's Degree on the Web Design track in the Spring of 2022.
+                Not knowing what I wanted to do when I came out of high-school, I somehow found myself where I belong, in the world of coding and designing. Coming from a family
+                of computer engineers and designers, it only came naturally to me to choose this route. My passion for the industry stems beyond just coding and designing. The idea 
+                that I can help ease every-day life for people and make a difference in the content that I produce excites and motivates me beyond reason.
+                  </p>
+                <p class = " margin-auto lh-lg fs-6 header-padding">
+                    I consider myself a very involved student and always looking for opportunities to grow and learn. Yearning for growth, I joined the Nicholson School of Communication and Media Alumni Mentorship Program. Through this mentor and mentee relationship, I get to learn from a Project Manager who oversees Front-End and Back-End Developers, as well as Designers. This experience has been greatly beneficial as I am more confident going into the workforce knowing more about how the industry works. 
+                </p>
+                <p class = " margin-auto lh-lg fs-6 header-padding">
+                    The workforce is not just about technical experience, however. Part of being a good employee and co-worker is the ability to communicate and work as part of a team. During my senior year of college, I participated in multiple clubs. One of these clubs, SHPE at UCF, taught me how to work with others to achieve a shared goal and how to express ideas in a clear manner. Having the skill to communicate well has been undervalued and it is a skill that many do not have. Knowing this, I took the initiative to put myself in situations where communication was essential and have learned to do it efficiently.
+                </p>
+                <p class = " margin-auto lh-lg fs-6 header-padding">
+                    No person is just their career, however. In my personal life, I liked to bake and am obsessed with dogs. I love dogs so much that I joined STEP at UCF, a service dog training program in which I was able to learn about multiple disabilities and how dogs can help those with disabilities have better lives. I also have a passion for the gym and staying healthy. I believe a good work-life balance leads to greater results in a person’s happiness and productivity.
+                </p>
+                <p class = " margin-auto lh-lg fs-6 header-padding">
+                    With all this knowledge and experience that I have gained, I want to put it to good use in the Web Development industry as well as the community around me. I look forward to any and all opportunities that may present themselves.
                 </p>
             </div>
         </div>
-      </div>
+        </div>
       <div class = "container-fluid header-padding">
         <div class = "row">
           <div class = "col d-flex flex-column text-center">
