--- a/fresh-eats.html
+++ b/fresh-eats.html
@@ -106,8 +106,8 @@
                                         </div>
                                         <div class = "col d-flex flex-column justify-content-center">
                                             <section class = "margin-auto line-heights">
-                                                <p class = "fs-4 lh-md text-black"> One of the biggest functionaly this website focuses on is a logging in and signing up system. It was imperative
-                                                    that a user with no account could not access the website. After all, we do not want to just give out those delicious recipies for free!
+                                                <p class = "fs-4 lh-md text-black"> One of the biggest functionalities this website focuses on is a logging in and signing up system. It was imperative
+                                                    that a user with no account could not access the website. After all, we do not want to just give out those delicious recipes for free!
                                                     In my database.php, I was able to make the users username, email and password set equal to $_SESSION and set it to true once all that information has been inputted into the database.
                                                     If $_SESSION not equal to true, the user will have to make an account and will not be able to continue until they do.
                                                 </p>
@@ -168,9 +168,9 @@
                                              </div>
                                              <div class = "col d-flex flex-column just justify-content-center header-padding">
                                                 <p class = "fs-4 lh-lm"> There is quite a handful of CSS to unpack here, but here are the most important snippets. It was important to have
-                                                    the photos lined up all in one row, however in doing so we have an overflow of content that stretches the page. With the overflow in ".position-rel" 
-                                                    set to hidden, we easily fix this issue. Next we need to set the width of each photo (13%) and set a transition time (2s). With most of the styling 
-                                                    issues out of the way, we can focus on how we are going to utilize CSS to actually move the photos!
+                                                    the photos lined up all in one row; however in doing so, we have an overflow of content that stretches the page. With the overflow in ".position-rel" 
+                                                    set to hidden, we easily fix this issue. Next, we need to set the width of each photo (13%) and set a transition time (2s). With most of the styling 
+                                                    issues out of the way, we can focus on how we are going to utilize CSS to move the photos!
                                                 </p>
                                                 <p class = "fs-4 lh-lm"> Through using the CSS pseudo-class selector ":checked" we get to set rules to the photos whenever one of the radio buttons get "checked."
                                                     Remember how we labled the very first photo with a class of "first"? This and the general sibling combinator (~) is the key to how it all works!
