--- a/style-guide.html
+++ b/style-guide.html
@@ -43,9 +43,9 @@
                     </div>
                     <div class = "col d-flex flex-column justify-content-center">
                         <section class = "margin-auto line-heights">
-                            <p class = "fs-4 lh-md"> For those senior project, me and my team were tasked with choosing a website or application to make better and revamp.
-                                Me and my team chose the <a href = "https://www.myflorida.com/" target = "_blank" > MyFlorida</a> website to redeisgn and redevelop. I took the initiative to be the designer of the team
-                                and went ahead a did research.</p>
+                            <p class = "fs-4 lh-md"> For the senior project, my team and I were tasked with choosing a website or application to improve and revamp.
+                                My team and I chose the <a href = "https://www.myflorida.com/" target = "_blank" > MyFlorida</a> website to redesign and redevelop. I took the initiative to be the designer of the team
+                                and did research.</p>
                                 <p class = "fs-4 lh-md text-black fw-bold"> Programs: Adobe Illustrator, Canva</p>
                         </section>
                     </div>
@@ -56,8 +56,8 @@
                     <div class = "col d-flex flex-column justify-content-center min-thirty-five gray-bg">
                         <section class = "margin-auto line-heights">
                             <h2 class = "fw-bold fs-1 text-center header-padding">The Problem</h2>
-                            <p class = " margin-auto lh-lg fs-5 ">Through analysis, I found the websites major problem was a lack of consistent styling. This was due to the fact that all links
-                                on the website lead to external pages on a completely different website. In reality, the website only had one page, the home page. Even considering the inconsistent styling,
+                            <p class = " margin-auto lh-lg fs-5 ">Through analysis, I found the website's major problem was a lack of consistent styling. This was because all links
+                                on the website lead to external pages on a completely different website. In reality, the website only had one page: the home page. Even considering the inconsistent styling,
                                 the styling that was present looked outdated and lackluster.
                             </p>
                         </section>
