--- a/younite.html
+++ b/younite.html
@@ -62,8 +62,8 @@
                     <div class = "col d-flex flex-column justify-content-center min-thirty-five gray-bg">
                         <section class = "margin-auto line-heights">
                             <h2 class = "fw-bold fs-1 text-center header-padding">The Problem</h2>
-                            <p class = " margin-auto lh-lg fs-5">When brainstorming ideas, I did not want to create just another social app. I wanted to create an app that would solve a problem. During the production of this app,  hate towards those of Asian decent was prominent due to the lasting Covid-19 pandemic.
-                             People of darker skin are still facing prejudice and given unfair treatment. If only the world was more educated about other cultures, than maybe people can start to understand one another. Then maybe everyone would be treated as equal. By giving everyone a safe place to share their culture, YouNite aims to increase peoples awareness of culture in a fun and social way. </p>
+                            <p class = " margin-auto lh-lg fs-5">When brainstorming ideas, I did not want to create just another social app. I wanted to create an app that would solve a problem. During the production of this app,  hate towards those of Asian descent was prominent due to the lasting COVID-19 pandemic.
+                             People of darker skin are still facing prejudice and given unfair treatment. If only the world was more educated about other cultures, than maybe people can start to understand one another. Then maybe everyone would be treated as equal. By giving everyone a safe place to share their culture, YouNite aims to increase people's awareness of culture in a fun and social way. </p>
                         </section>
                     </div>
                     <div class = "container-fluid">
@@ -76,7 +76,7 @@
                                 <img class = "initial-img margin-auto" src = "assets/younite-name-prototype-2-500.png" alt = "early concept of younite app">
                             </div>   
                             <div class = "col d-flex flex-column justify-content-center">
-                                <p class = "fs-5 lh-lg margin-auto"> From the beginning I wanted the applications logo to have the earth included in it to represent the world and all people.</p>
+                                <p class = "fs-5 lh-lg margin-auto"> From the beginning, I wanted the applications logo to have the earth included in it to represent the world and all people.</p>
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                                     <img class = "initial-img" src = "assets/Hi-fi Proto Phone.png" alt = "phone wireframe">
                                 </div>
                                 <div class = "col d-flex flex-column justify-content-center">
-                                    <p class = "fs-3"> So how does this social app work? With YouNite users will be able to post everything relating to their culture. Through hashtags, users
+                                    <p class = "fs-3"> So how does this social app work? With YouNite, users will be able to post everything relating to their culture. Through hashtags, users
                                         find everyone's post within social topics exampled on the left. There will be multiple sections like Music, Dance, Food, and more. Users can also
                                         message other users, create group chats, leave a comment on posts, and explore information on all cultures.</p>
                                 </div>
@@ -132,8 +132,8 @@
                                         <img class = "initial-img" src = "assets/iphone Icon.jpg" alt="younite icon">
                                     </div>
                                     <div class = "col d-flex flex-column justify-content-center">
-                                        <p class = "fs-3 lh-lg">   This platform allows individuals of every culture and ethnicity to have a safe environment to share their culture with others so that people can not only be proud of who they are,
-                                              but are also educating others in the process. By mimicking all the popular social platforms in the market now in regards to posting, hashtags, commenting, and direct messaging,
+                                        <p class = "fs-3 lh-lg">   This platform allows individuals of every culture and ethnicity to have a safe environment to share their culture with others so that people can not only be proud of who they are
+                                              but also educate others in the process. By mimicking all the popular social platforms in the market now regarding posting, hashtags, commenting, and direct messaging,
                                               users will feel right at home with YouNite.  </p>
                                     </div>
                                 </div>
@@ -142,9 +142,9 @@
                                 <div class = "row">
                                     <div class = " col d-flex flex-column justify-content-center gray-bg">
                                         <h2 class = "fw-bold fs-1 header-padding text-center">Expected Results</h2>
-                                        <p class = "fs-3 lh-lg margin-auto"> I would expect YouNite to perform well as a platform, but more importantly I expect it to increase the awareness that people have in regards to culture.
-                                            I firmly believe YouNited has great significance in this society. Now is the time for people to become more aware of each other's differences and more accepting of them. If people were given a safe environment to share and educate others on their culture in a fun and positive way, perhaps individuals would be less likely to create prejudices and stereotypical thoughts about races different to them. In the end, people are afraid of things they
-                                            do not understand and this would be the perfect platform for individuals to educate themselves.</p>
+                                        <p class = "fs-3 lh-lg margin-auto"> I would expect YouNite to perform well as a platform, but more importantly, I expect it to increase the awareness that people have regarding culture.
+                                            I firmly believe YouNite has great significance in this society. Now is the time for people to become more aware of each other's differences and more accepting of them. If people were given a safe environment to share and educate others on their culture in a fun and positive way, perhaps individuals would be less likely to create prejudices and stereotypical thoughts about races different to them. In the end, people are afraid of things they
+                                            do not understand, and this would be the perfect platform for individuals to educate themselves.</p>
                                     </div>
                             </div>
                             <div class = "container-fluid">
