--- a/about.html
+++ b/about.html
@@ -26,13 +26,119 @@
                 </div>
         </nav>
     </div>
+    <div class = "container-fluid about-intro-1">
+        <div class = "row"></div>
+        <div class = "col"><h2 class = "text-white"> And so</h2></div>
+    </div>
+    <div class = "container-fluid about-intro-2">
+        <div class = "row"></div>
+        <div class = "col"><h2 class = "text-white"> she went</h2></div>
+    </div>
+    <div class = "container-fluid about-intro-3">
+        <div class = "row"></div>
+        <div class = "col"><h2 class = "text-white"> to change</h2></div>
+    </div>
+    <div class = "container-fluid about-intro-4">
+        <div class = "row"></div>
+        <div class = "col"><h2 class = "text-white"> the world.</h2></div>
+    </div>
+    <div class = "container-fluid gray-bg letter-padding">
+        <div class = "row">
+            <div class = "col flex-column justify-content-center white-bg margin-auto letter-border ">
+                <h2 class = "about-me-letter-head"><span class = "cursive-intro" data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation-on-scroll="repeat" data-mdb-animation="slide-in-down" >My name is <span class = "text-coral">Chantal Beltran</span>,</span></h2>
+                <div class = "row">
+                <div class = "col">
+                        <img class = "about-me-photos" src = "assets/chantalgrad8_small.jpg" alt = "Chantal Beltran in UCF's Reflection Pond holding a bottle in front of her and smiling at the camera">
+                    </div> 
+                    <div class = "col d-flex flex-column justify-content-center">
+                         <section class = "about-me-body line-heights">
+                            <p class = "lh-lg">And I love everything about Web Development. Some might consider me a unique case because I take interest in both UI/UX Design and Front-End Development.
+                                Design accessibility is also a very important topic for me. I have a great passion for this industry and intend to use it! Having recently graduated
+                                from the University of Central Florida with my Bachelor’s degree in Digital Media, I am more than elated to put my skills out in the real world to make a difference.</p>
+                        </section>
+                    </div>
+                    </div>
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <hr style="height:0px;border-width:0;color:white;background-color:white">
+                    <div class = "row">
+                    <div class = "col">
+                        <img class = "about-me-photos" src = "assets/chantalgrad10_small.jpg" alt = "Chantal Beltran sitting in front of a UCF fountain with a black and gold UCF stole looking at the camera">
+                    </div> 
+                   
+                    <div class = "col d-flex flex-column justify-content-center">
+                        <section class = "about-me-body line-heights">
+                        <p class = "fw-bold fs-4"> Fun facts about me</p>
+                        <hr style="height:0px;border-width:0;color:white;background-color:white">
+                        <hr style="height:0px;border-width:0;color:white;background-color:white">
+                        <ul style="list-style-type:none"class = "...">
+                            <li class = "lh-lg"> I am absolutely obsessed with dogs</li>
+                            <li class = "lh-lg"> Most days you will find me in the gym lifting weights</li>
+                            <li class = "lh-lg"> I have played the piano since I was 6 years old</li>
+                        </ul>
+                        </section>
+                    </div>
+                </div>
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                <div class = "row">
+                    <div class = "col d-flex flex-column justify-content-center">
+                        <section class = " margin-auto letter-close">
+                            <p class = "text-center fs-5"> The most significant fact about me, however, is that I aspire to make a difference in any way I can to help make this world a better place.
+                                And that is exactly what I intend to do.
+                            </p>
+
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                            <p class = "text-center fs-5"> One line of code at a time.</p>
+
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                                <hr style="height:0px;border-width:0;color:white;background-color:white">
+                            <p class = "text-center monospace fw-bold fs-4"> &#60; And so <span class ="text-coral">she</span> went to change the <span class = "text-coral">world</span> /&#62;</p>
+                        </section>
+                    </div>                
+                </div>
+            </div>
+            <div class = "row closing-padding">
+                    <div class = "col d-flex flex-column justify-content-center margin-auto">
+                        <img class = "closing-photo" src = "assets/chantalgrad11_small.jpg" alt = "me and a fellow grad with our arms intertwined looking forward from the back to show off our caps, Chantal Beltran's says 'and so she went to change the world'">
+                    </div>
+                </div>
+        </div>
+    </div>
+    <!--
     <div class="container-fluid">
         <div class="row">
             <div class = "col flex-column justify-content-center">
                 <img class = "sm-about" src = "assets/intro-photo-cropped-2.jpg">
             </div>
         </div>
-        <div claass = "row">
+        <div class = "row">
             <div class="col d-flex flex-column justify-content-center gray-bg">
                 <h2 class = "margin-auto lh-lg fs-1 header-padding"> I am Chantal Beltran,</h2>
                 <p class = " margin-auto lh-lg fs-6 header-padding"> I am a senior at the University of Central Florida and will earn my Digital Media Bachelor's Degree on the Web Design track in the Spring of 2022.
@@ -54,7 +160,7 @@
                 </p>
             </div>
         </div>
-        </div>
+        </div>-->
       <div class = "container-fluid header-padding">
         <div class = "row">
           <div class = "col d-flex flex-column text-center">
