--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <div class = "collapse navbar-collapse" id = "navbarMenu">
                     <a href = "#" class = "navbar-brand"><img class = "logo" src = "assets/logo.png"/></a>
                         <ul class = "navbar-nav ms-auto">
-                            <li class = "nav-item"><a href = "#" class = "nav-link active" aria-current="page">Home</a></li>
-                            <li class = "nav-item"><a href = "about.html" class = "nav-link">About</a></li>
-                            <li class = "nav-item"><a href = "projects.html" class = "nav-link last">Projects</a></li>
+                            <li class = "nav-item"><a href = "#" class = "nav-link active hover-underline-animation" aria-current="page">Home</a></li>
+                            <li class = "nav-item"><a href = "about.html" class = "nav-link hover-underline-animation">About</a></li>
+                            <li class = "nav-item"><a href = "projects.html" class = "nav-link last hover-underline-animation">Projects</a></li>
                         </ul>
                 </div>
         </nav>
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col d-flex flex-column justify-content-center">
                 <h1 class = "left-center-1"> Hello,</h1>
-                <h1 class = "left-center-2">I am <span class = "chantal-coral">Chantal</span>.</h1>
+                <h1 class = "left-center-2">I am <span class = "text-coral">Chantal</span>.</h1>
                 <p> Designer and Front-End Developer</p>
             </div>
         </div>
@@ -78,12 +78,12 @@
       </div>
       <div class = "container-fluid">
         <div class = "row">
-            <div class = "col d-flex flex-column justify-content-center">
-                <img class = "img-fluid" src = "assets/intro-photo.jpg" alt = "professional picture of Chantal Beltran ">
+            <div class = "col d-flex flex-column justify-content-center no-padding">
+                <img class = "phone-assets" src = "assets/chantalgrad4.jpg" alt = "professional picture of Chantal Beltran ">
             </div>
-            <div class = "col d-flex flex-column contact gray-bg"> 
-                <h2 class = "fw-bold header-padding">Contact Me</h2>
-                <form class = "contact-form" action="https://formsubmit.co/f1395d261da50853b36924e052ba562c" method="POST">
+            <div class = "col d-flex flex-column justify-content-center contact gray-bg margin-auto no-padding"> 
+                <h2 class = "fw-bold header-padding text-center">Contact Me</h2>
+                <form class = "contact-form" action="https://formsubmit.co/chantalbeltrandev@gmail.com" method="POST">
                     <!--Honeypot-->
                     <input type="text" name = "_honey" style = "display: none;">
 
@@ -108,7 +108,7 @@
                         <label for="message">Message</label>
                         <textarea class="form-control" name = "message" id="message" rows="3" placeholder = "Leave a message here" required></textarea>
                     </div>
-                    <div class = "row align-items-center">
+                    <div class = "row align-items-center margin-auto input-pad">
                         <div class = "col d-flex flex-column justify-content-center">
                             <button class="btn btn-primary" type="submit">Submit form</button>
                         </div>
