--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class = "col d-flex flex-column justify-content-center contact gray-bg margin-auto no-padding"> 
                 <h2 class = "fw-bold header-padding text-center">Contact Me</h2>
-                <form class = "contact-form" action="https://formsubmit.co/chantalbeltrandev@gmail.com" method="POST">
+                <form class = "contact-form" action="https://formsubmit.co/12801da26e743d96ec62309decdfa945" method="POST">
                     <!--Honeypot-->
                     <input type="text" name = "_honey" style = "display: none;">
 
@@ -129,7 +129,7 @@
                 </div>
             </div>
       </div>
-      <div class = "container-fluid">
+      <div class = "container-fluid gray-bg letter-padding">
         <div class = "row">
           <div class = "col d-flex flex-column text-center">
             <footer>
