--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
                 <div class = "collapse navbar-collapse" id = "navbarMenu">
                     <a href = "#" class = "navbar-brand"><img class = "logo" src = "assets/logo.png"/></a>
                         <ul class = "navbar-nav ms-auto">
-                            <li class = "nav-item"><a href = "index.html" class = "nav-link" aria-current="page">Home</a></li>
-                            <li class = "nav-item"><a href = "#" class = "nav-link active">About</a></li>
-                            <li class = "nav-item"><a href = "projects.html" class = "nav-link">Projects</a></li>
+                            <li class = "nav-item"><a href = "index.html" class = "nav-link hover-underline-animation" aria-current="page">Home</a></li>
+                            <li class = "nav-item"><a href = "#" class = "nav-link active hover-underline-animation">About</a></li>
+                            <li class = "nav-item"><a href = "projects.html" class = "nav-link last hover-underline-animation">Projects</a></li>
                         </ul>
                 </div>
         </nav>
