--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,9 @@
                     <div class = "collapse navbar-collapse" id = "navbarMenu">
                         <a href = "#" class = "navbar-brand"><img class = "logo" src = "assets/logo.png"/></a>
                             <ul class = "navbar-nav ms-auto">
-                                <li class = "nav-item"><a href = "index.html" class = "nav-link" aria-current="page">Home</a></li>
-                                <li class = "nav-item"><a href = "about.html" class = "nav-link">About</a></li>
-                                <li class = "nav-item"><a href = "#" class = "nav-link active last ">Projects</a></li>
+                                <li class = "nav-item"><a href = "index.html" class = "nav-link hover-underline-animation">Home</a></li>
+                                <li class = "nav-item"><a href = "about.html" class = "nav-link hover-underline-animation">About</a></li>
+                                <li class = "nav-item"><a href = "#" class = "nav-link active last hover-underline-animation " aria-current="page">Projects</a></li>
                             </ul>
                     </div>
             </nav>
