--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
           </div>
-          <div class = "container-fluid">
+          <div class = "container-fluid gray-bg letter-padding">
             <div class = "row">
               <div class = "col d-flex flex-column text-center">
                 <footer>
