--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,20 @@
                 </div>
             </div>
           </div>
+          <div class="container-fluid">
+            <div class="row">
+                <div class = "col d-flex flex-column justify-content-center">
+                    <section class = "margin-auto project-name">
+                        <h2 class = "fw-bold text-center">Coming Soon</h2>
+                        <p class = "project-des fw-bold text-center">Web and Mobile Friendly Application</p>
+                        <div class = "text-center"><p></p></div>
+                    </section>
+                </div>
+                <div class = "col">
+                    <img class = "phone-assets" src = "assets/gym-rats-phone.png" alt = "An app icon for an imaginary app called GymRats showing the login page with a picture of a gym in the background">
+                </div>
+            </div>
+          </div>
           <div class = "container-fluid gray-bg letter-padding">
             <div class = "row">
               <div class = "col d-flex flex-column text-center">
