--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class = "col d-flex flex-column justify-content-center">
                 <section class = "margin-auto line-heights">
                     <h2 class = "fw-bold">Design</h2>
-                    <p>I love to create asthetically pleasing designs through the use of colors and space.  Click here to see logos, icons, styleguides, and more pieces I have created.</p>
+                    <p class = "fs-5 info-padding">I love to create aesthetically pleasing designs through the use of colors and space. Click here to see logos, icons, style guides, and more pieces I have created.</p>
                     <a href="projects.html" class="btn btn-primary">See more</a>
                 </section>
             </div>
@@ -70,7 +70,7 @@
             <div class = "col d-flex flex-column justify-content-center">
                 <section class = "margin-auto">
                     <h2 class ="fw-bold"> Front-End Development</h2>
-                    <p> Coding is where I like to challenge myself. The possibilities are endless here. Click here to see websites and bits of functionality I have created.</p>
+                    <p class = "fs-5 info-padding">Coding is where I like to challenge myself. The possibilities are endless here. Click here to see the websites and bits of functionality I have created.</p>
                     <a href="projects.html#design_destination" class="btn btn-primary">See more</a>
                 </section>
             </div>
